--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,14 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="title" property="og:title" content="Somewhere New | An Airbnb Clone">
+  <meta property="og:type" content="Website">
+  <meta name="image" property="og:image"
+    content="https://media.discordapp.net/attachments/929826139906637925/929860877241438257/unknown.png?width=1029&height=505">
+  <meta name="description" property="og:description"
+    content="Somewhere New is a solo-developed full-stack application built with Javascript, Express, React / Redux, Sequelize, Postgres, and HTML / CSS.">
+  <meta name="author" content="Devin Juley">
 </head>
 
 <body>
